@startuml
'https://plantuml.com/sequence-diagram

interface PropFactory {
    + {abstract} createProps(int locationX, int locationY):BaseProp
}

class BloodFactory {
    + createProps(int locationX, int locationY):BaseProp
}

class BombFactory {
    + createProps(int locationX, int locationY):BaseProp
}

class BulletFactory {
    + createProps(int locationX, int locationY):BaseProp
}

class PlusbulletFactory {
    + createProps(int locationX, int locationY):BaseProp
}

PropFactory <|.. BloodFactory
PropFactory <|.. BombFactory
PropFactory <|.. BulletFactory
PropFactory <|.. PlusbulletFactory

abstract class BaseProp {
    + BaseProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + active(HeroAircraft aircraft):void
}

class BloodProp {
    + BloodProp(int locationX, int locationY, int speedX, int speedY)
    + active(HeroAircraft aircraft):void
}

class BombProp {
    + BombProp(int locationX, int locationY, int speedX, int speedY)
    - observers:List<Observer>
    + attach(Observer observer):void
    + detach(Observer observer):void
    + active(HeroAircraft aircraft):void
}

class BulletProp {
    + BulletProp(int locationX, int locationY, int speedX, int speedY)
    + active(HeroAircraft aircraft):void
}

class PlusbulletProp {
    + BulletProp(int locationX, int locationY, int speedX, int speedY)
    + active(HeroAircraft aircraft):void
}

BaseProp <|-- BloodProp
BaseProp <|-- BombProp
BaseProp <|-- BulletProp
BaseProp <|-- PlusbulletProp

PropFactory ..> BaseProp
@enduml